# Horbits2

./: .gitignore  LICENSE  horbits2.cabal  stack-setup.txt  stack.yaml
app/: Main.hs
src/: Lib.hs
src/Horbits/: Body.hs  Orbit.hs
src/Horbits/Body/: Atmosphere.hs  Body.hs
src/Horbits/Data/: Binding.hs  StateVar.hs
src/Horbits/Dimensional/: Internal.hs  Prelude.hs
src/Horbits/Orbit/: Class.hs  Position.hs  Properties.hs
src/Horbits/Time/: KerbalClock.hs  KerbalClock.hs_  KerbalDateTime.hs  KerbalDateTime2.hs
test/Horbits/: Matchers.hs  MatchersSpec.hs
test/Horbits/Dimensional/: PreludeSpec.hs
test/Horbits/Matchers/: Core.hs  Lib.hs  Matcher.hs
test/Horbits/Orbit/: Gen.hs  GenSpec.hs  Sample.hs
