name:                horbits2
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/horbits2#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Horbits.Body
                     , Horbits.Data.Binding
                     , Horbits.Dimensional.Prelude
                     , Horbits.SolarSystem
                     , Horbits.Time
                     , Horbits.Orbit
  other-modules:       Horbits.Body.Atmosphere
                     , Horbits.Body.Body
                     , Horbits.Body.Color
                     , Horbits.Body.Data
                     , Horbits.Body.Id
                     , Horbits.Data.StateVar
                     , Horbits.Dimensional.Internal
                     , Horbits.Orbit.Class
                     , Horbits.Orbit.Data
                     , Horbits.Orbit.Geometry
                     , Horbits.Orbit.Position
                     , Horbits.Orbit.Properties
                     , Horbits.Orbit.Velocity
                     , Horbits.Time.KerbalClock
                     , Horbits.Time.KerbalDateTime
  build-depends:       base >= 4.7 && < 5
                     , clock >= 0.7.2
                     , containers >= 0.5.7.1
                     , dimensional >= 1.0.1.2
                     , gtk3 >= 0.14.5
                     , lens >= 4.14
                     , linear >= 1.20.5
                     , numtype-dk >= 0.5.0.1
                     , StateVar >= 1.1.0.4
                     , template-haskell >= 2.11.0
                     , transformers >= 0.5.2.0
  default-language:    Haskell2010

executable horbits2-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , horbits2
                     , gtk3 >= 0.14.5
  default-language:    Haskell2010

test-suite horbits2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Horbits.Dimensional.PreludeSpec
                     , Horbits.Matchers
                     , Horbits.MatchersSpec
                     , Horbits.Matchers.Core
                     , Horbits.Orbit.Gen
                     , Horbits.Orbit.GenSpec
                     , Horbits.Orbit.Sample
  build-depends:       base
                     , horbits2
                     , dimensional >= 1.0.1.2
                     , hspec
                     , hspec-expectations
                     , HUnit
                     , lens >= 4.14
                     , mtl >= 2.2.1
                     , random >= 1.1
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/horbits2
